# code2clipboard

./: .bumpversion.cfg  .gitignore  README.md  code2prompt.py  pyproject.toml  requirements.txt
code2clipboard/: usefull_notes.md
code2prompt/: code2prompt.py
